[package]
name = "loading"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Show loading in terminal"
readme = "README.md"
homepage = "https://github.com/wyhaya/loading"
repository = "https://github.com/wyhaya/loading.git"

keywords = [
    "terminal",
    "loading"
]

[dependencies]